# TACCV4.1

./: .gitignore  pyproject.toml  requirements.txt  threat_model.md
docs/: crypto_profile_notes.md  non_goals_and_risks.md  protocol_flow.md  readme.md  transcript_design.md
scripts/: run_client_alice.sh  run_client_bob.sh  run_relay.sh  smoke_test_local.sh
src/taccv/: __init__.py  taccv41.py
src/taccv/client/: state.py  wsclient.py
src/taccv/crypto/: handshake.py  nonce.py  pake.py  primitives.py  secure.py
src/taccv/protocol/: constants.py  profiles.py  transcript.py  validation.py
src/taccv/relay/: app.py  ratelimit.py  sessions.py
src/taccv/util/: deps.py  logging.py
