[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taccv"
version = "4.1.0"
description = "TACCV4.1 — PAKE-secured pairing over an untrusted relay (reference implementation)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "websockets>=12.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "spake2>=0.9",
  "cryptography>=42.0",
  "structlog>=24.0",
  "pydantic>=2.0",
]

[project.scripts]
taccv = "taccv.taccv41:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
